refact(hyperpaas-manager): tab system for service detail
